--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,172 @@
-.attribution {
-  font-size: 11px;
+@import url("responsive.css");
+
+:root {
+  --dark-cyan: hsl(158, 36%, 37%);
+  --cream: hsl(30, 38%, 92%);
+  --very-dark-blue: hsl(212, 21%, 14%);
+  --dark-grayish-blue: hsl(228, 12%, 48%);
+  --white: hsl(0, 0%, 100%);
+}
+
+html {
+  font-size: 14px;
+}
+
+body {
+  background-color: var(--cream);
+  margin-top: 100px;
+  position: relative;
+}
+
+.card {
+  max-width: 800px;
+  height: 550px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  border-radius: 10px;
+}
+
+.image {
+  background-image: url("../images/image-product-desktop.jpg");
+  background-size: cover;
+  max-width: 100%;
+  height: 550px;
+  border-radius: 10px 0px 0px 10px;
+}
+
+.content {
+  padding: 40px;
+  background-color: var(--white);
+  border-radius: 0px 10px 10px 0px;
+  display: grid;
+  place-content: start;
+}
+
+.content__subtitle {
+  text-transform: uppercase;
+  font-weight: normal;
+  letter-spacing: 0.25rem;
+  color: var(--dark-grayish-blue);
+}
+
+.content__title {
+  font-size: 2.5rem;
+  color: var(--very-dark-blue);
+  margin: -4px 0px 15px;
+  max-width: 250px;
+  line-height: 2.75rem;
+}
+
+.content__title,
+.content__price {
+  font-family: "Fraunces", serif;
+  font-size: 2.5rem;
+}
+
+.content__description {
+  color: var(--dark-grayish-blue);
+  line-height: 1.5rem;
+  font-size: 1rem;
+  max-width: 225px;
+}
+
+.content__subtitle,
+.content__description {
+  font-family: "Montserrat", sans-serif;
+}
+
+.content__price {
+  color: var(--dark-cyan);
+}
+
+.price-secondary {
+  font-weight: 100;
+}
+
+.content__container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+}
+
+.content__container .price-secondary {
+  color: var(--dark-grayish-blue);
+  font-size: 1rem;
+  text-decoration: line-through;
+  font-weight: 300;
+}
+
+.content__button {
+  text-decoration: none;
+  color: var(--white);
+  background-color: var(--dark-cyan);
+  margin-top: 20px;
+  padding: 18px;
+  font-family: "Montserrat", sans-serif;
   text-align: center;
+  border-radius: 10px;
+  font-weight: bold;
+}
+
+.content__button img {
+  margin-right: 10px;
+}
+
+.attribution {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  bottom: -50px;
+  font-size: 11px;
 }
 
 .attribution a {
   color: hsl(228, 45%, 44%);
+  font-family: "Montserrat", sans-serif;
+}
+
+@media (max-width: 700px) {
+
+  body {
+    margin-top: 40px;
+  }
+
+  .card {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .content {
+    border-radius: 0px 0px 10px 10px;
+    padding: 40px 20px;
+  }
+
+  .image {
+    height: 300px;
+    background-position: center center;
+    border-radius: 10px 10px 0px 0px;
+    background-image: url(../images/image-product-mobile.jpg);
+  }
+
+  .content__subtitle {
+    margin-top: -10px;
+  }
+
+  .content__title {
+    max-width: 350px;
+  }
+
+  .content__description {
+    max-width: 350px;
+  }
+
+  .attribution {
+    bottom: -170px;
+  }
+}
+
+@media (max-width: 370px) {
+  .attribution {
+    bottom: -200px;
+  }
 }
